--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "vite": "^7.2.1",
     "vue": "^3.5.23"
   }
