--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "scripts": {
     "build": "vite build && npm run build:types",
     "build:types": "tsc --emitDeclarationOnly",
-    "dev:example": "vite --config example/vite.config.ts"
+    "dev:example": "vite --config example/vite.config.ts",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
     "vite": "^7.2.1",
