--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "uuid": "^13.0.0",
     "vite": "^7.2.1",
     "vue": "^3.5.23"
+  },
+  "dependencies": {
+    "@vueuse/core": "^14.0.0"
   }
 }
